Added services section and fixed some layout - still need to fix layout

--- a/src/Styles/Home/hero.scss
+++ b/src/Styles/Home/hero.scss
@@ -41,6 +41,7 @@
             cursor: pointer;
             width: calc(400px - 3rem);
             text-align: center;
+            text-decoration: none;
 
         }
     }
