--- a/src/Styles/Home/history.scss
+++ b/src/Styles/Home/history.scss
@@ -22,8 +22,9 @@
     .history-title {
         grid-row: 2;
         grid-column: 2/4;
-        font-size: 6rem; //7.5
-        margin-bottom: 3rem;
+        font-size: 5rem;
+        margin-top: auto; //7.5
+        // margin-bottom: 2rem;
         // margin-left: 2rem; 
         // margin-top: 5rem;
     }
@@ -31,13 +32,12 @@
     .history-container {
         grid-row: 3;
         grid-column: 3;
-
-        padding: 4rem 0 0 8rem;
+        padding: 5rem 0 0 7rem;
 
         .history-text {
-            font-size: 1.8rem;
+            font-size: 1.6rem;
             line-height: 2.5rem;
-            letter-spacing: 10%;
+            letter-spacing: 1px;
         }
 
         .history-info {
@@ -57,7 +57,7 @@
 
                 .text {
                     font-family: $header-font;
-                    font-size: 1rem;
+                    font-size: 1.2rem;
                     letter-spacing: 1px;
                     font-weight: bold;
                     text-transform: uppercase;
