--- a/src/Styles/Home/newsLetter.scss
+++ b/src/Styles/Home/newsLetter.scss
@@ -2,11 +2,12 @@
 
 
 .news-letter {
+    // margin-top: 5rem;
     background: #101010;
     display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
 
     .text-container {
@@ -19,7 +20,7 @@ justify-content: center;
         }
 
         .news-text {
-            font-size: 1.8rem;
+            font-size: 1.6rem;
             line-height: 2.5rem;
         }
 
@@ -31,7 +32,7 @@ justify-content: center;
                 color: $black;
                 font-weight: bold;
                 width: 100%;
-                height: 6rem;
+                height: 5rem;
                 padding-left: 1rem;
                 font-family: $text-font;
                 font-size: 1.6rem;
@@ -45,9 +46,12 @@ justify-content: center;
             a {
                 font-size: 1.4rem;
                 letter-spacing: 1px;
-                padding: 2rem 3rem;
+                padding: 1rem 5rem;
                 margin-left: 2rem;
                 background: $green;
+                text-decoration: none;
+                display: flex;
+                align-items: center;
             }
         }
     }
