added testimonial section with a 'slider'

--- a/src/Styles/Home/home.scss
+++ b/src/Styles/Home/home.scss
@@ -6,13 +6,13 @@
     grid-template-columns: 100px 2fr 1fr 100px;
     grid-template-rows: 80px calc(100vh - 80px) 100vh 100vh 300px 100vh minmax(200px, 1fr);
     grid-template-areas:
-        "head       head        head        head"
-        ".          hero        hero        hero"
-        "history    history     history     ."
-        ".          services    services    services"
-        "news       news        news        news"
-        "testomon   testomon    testomon    testomon"
-        "footer     footer      footer      footer";
+        "head           head            head            head"
+        ".              hero            hero            hero"
+        "history        history         history         ."
+        ".              services        services        services"
+        "news           news            news            news"
+        ".              testimonials    testimonials    ."
+        "footer         footer          footer          footer";
 
 
 }
@@ -51,8 +51,8 @@ nav {
     grid-area: footer;
 }
 
-.testomonials {
-    grid-area: testomon;
+.testimonials {
+    grid-area: testimonials;
 }
 
 .services {
