--- a/src/Styles/Home/services.scss
+++ b/src/Styles/Home/services.scss
@@ -22,8 +22,8 @@
         grid-column: 1/3;
         font-size: 5rem;
         margin-top: auto;
-        display: flex;
-        justify-content: flex-end;
+        margin-left: auto;
+
     }
 
     .services-container {
