responsiveness to hero section and navbar

--- a/src/Styles/Global/footer.scss
+++ b/src/Styles/Global/footer.scss
@@ -1,8 +1,8 @@
 @import '../_global';
 
 .footer {
-    // position: absolute;
-    // bottom: 0;
+    // position: absolute
+    // margin-top: 80px;
     width: 100%;
     height: 100%;
     display: grid;
