--- a/src/Styles/Home/history.scss
+++ b/src/Styles/Home/history.scss
@@ -2,9 +2,12 @@
 
 
 .history {
+    height: 100vh;
+    max-width: 1700px;
     display: grid;
-    grid-template-columns: 600px 100px 1fr; // 900px 50px 1fr 300px
+    grid-template-columns: minmax(250px, 1fr) 100px 1fr; // 900px 50px 1fr 300px
     grid-template-rows: 75px 150px 1fr 75px; //100 800 200
+    margin: 0 auto;
 
     .history-img {
         grid-row: 2/4;
@@ -30,12 +33,13 @@
     .history-container {
         grid-row: 3;
         grid-column: 3;
-        padding: 5rem 0 0 7rem;
+        padding: 5rem 7rem 0 7rem;
 
         .history-text {
             font-size: 1.8rem;
             line-height: 2.5rem;
             letter-spacing: 1px;
+            word-wrap: break-word;
         }
 
         .history-info {
@@ -65,5 +69,24 @@
         }
     }
 
-
 }
+
+
+@media screen and (min-width: 1720px) {}
+
+
+@media screen and (max-width: 1048px) {
+    .history {
+        .history-container {
+            grid-row: 3;
+            grid-column: 3;
+            padding: 5rem 3rem 0 3rem;
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {}
+
+@media screen and (max-width: 425px) {}
+
+@media screen and (max-width: 350px) {}
