--- a/src/Styles/Home/newsLetter.scss
+++ b/src/Styles/Home/newsLetter.scss
@@ -3,6 +3,7 @@
 
 .news-letter {
     // margin-top: 5rem;
+    height: 300px;
     background: #101010;
     display: flex;
     flex-direction: column;
