--- a/src/Styles/Global/hamburger.scss
+++ b/src/Styles/Global/hamburger.scss
@@ -5,7 +5,7 @@
     position: absolute;
     top: 50%;
     transform: translate(0, -50%);
-    right: 2rem;
+    right: 5rem;
     flex-direction: column;
     justify-content: space-around;
     width: 3.5rem;
@@ -30,14 +30,20 @@
         transform-origin: 1px;
 
         // &:nth-child(2) {
- //     margin-left: auto;
- //     width: 3rem;
- // }
+        //     margin-left: auto;
+        //     width: 3rem;
+        // }
     }
 
-    @media screen and (max-width: 850px) {
+    @media screen and (max-width: 939px) {
         & {
             display: flex;
+        }
+    }
+
+    @media screen and (max-width: 768px) {
+        & {
+            right: 2.5rem;
         }
     }
 }
