--- a/src/Styles/Global/sidebar.scss
+++ b/src/Styles/Global/sidebar.scss
@@ -1,7 +1,7 @@
 @import '../_global';
 
 .sidebar {
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center; // ta bort eller ha kvar? 
