--- a/src/Styles/Home/home.scss
+++ b/src/Styles/Home/home.scss
@@ -1,33 +1,12 @@
 @import '../_global';
 
 .layout {
-    position: relative;
-    display: grid;
-    grid-template-columns: 100px 2fr 1fr 100px;
-    grid-template-rows: 80px calc(100vh - 80px) 100vh 100vh 300px 100vh minmax(200px, 1fr);
-    grid-template-areas:
-        "head           head            head            head"
-        ".              hero            hero            hero"
-        "history        history         history         ."
-        ".              services        services        services"
-        "news           news            news            news"
-        ".              testimonials    testimonials    ."
-        "footer         footer          footer          footer";
-
-
+    .hero {
+        height: calc(100vh - 80px);
+    }
 }
 
-nav {
-    grid-area: head;
-}
 
-.hero {
-    grid-area: hero;
-}
-
-.history {
-    grid-area: history;
-}
 
 .read-more {
     float: right;
@@ -38,23 +17,4 @@ nav {
     .fontAwesome {
         margin-left: .5rem;
     }
-}
-
-.news-letter {
-    grid-area: news;
-}
-
-
-
-.footer {
-    // height: 100%;
-    grid-area: footer;
-}
-
-.testimonials {
-    grid-area: testimonials;
-}
-
-.services {
-    grid-area: services;
 }
