--- a/src/Styles/Home/services.scss
+++ b/src/Styles/Home/services.scss
@@ -2,6 +2,7 @@
 
 
 .services {
+    height: 100vh;
     display: grid;
     grid-template-columns: 1fr 100px 600px; // 900px 50px 1fr 300px
     grid-template-rows: 55px 150px 1fr 75px; //100 800 200
@@ -32,7 +33,7 @@
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
         grid-gap: 4rem;
-        padding: 5rem 5rem 0 0;
+        padding: 5rem 5rem 0 5rem;
 
         .container {
             display: flex;
