--- a/src/Styles/Home/testimonials.scss
+++ b/src/Styles/Home/testimonials.scss
@@ -2,6 +2,7 @@
 
 
 .testimonials {
+    height: 100vh;
     display: grid;
     grid-template-columns: 1fr 100px 500px; // 900px 50px 1fr 300px
     grid-template-rows: 125px 150px 1fr 125px; //100 800 200
@@ -24,7 +25,7 @@
     .slider-text {
         grid-row: 3/4;
         grid-column: 3/4;
-        padding: 7rem 0 0 7rem;
+        padding: 7rem 7rem 0 7rem;
 
 
     }
