--- a/src/Styles/Home/history.scss
+++ b/src/Styles/Home/history.scss
@@ -5,8 +5,8 @@
     min-height: 100vh;
     max-width: 1700px;
     display: grid;
-    grid-template-columns: minmax(300px, 1fr) 100px 1fr; // 900px 50px 1fr 300px
-    grid-template-rows: 75px 150px 1fr 75px; //100 800 200
+    grid-template-columns: minmax(200px, 1fr) 100px 1fr;
+    grid-template-rows: 75px 150px 1fr 75px;
     margin: 0 auto;
 
     .history-img {
@@ -26,7 +26,7 @@
         grid-row: 2;
         grid-column: 2/4;
         font-size: 5rem;
-        margin-top: auto; //7.5
+        margin-top: auto;
 
     }
 
@@ -49,7 +49,7 @@
         }
 
         .history-info {
-            margin-top: 5rem;
+            margin-top: 3rem;
             display: flex;
 
             .container {
@@ -60,6 +60,7 @@
                 }
 
                 .number {
+                    margin-top: 2rem;
                     font-size: 3rem;
                 }
 
@@ -97,10 +98,7 @@
 
 @media screen and (max-width: 1440px) {
     .history {
-        .history-title {
-            // font-size: 4.5rem;
-
-        }
+        .history-title {}
 
         .history-container {
             .history-text {
@@ -125,30 +123,41 @@
 
 @media screen and (max-width: 1024px) {
     .history {
+        grid-template-columns: minmax(200px, 1fr) 100px minmax(450px, 1fr);
 
         .history-title {
-            font-size: 4.5rem;
+            font-size: 4rem;
 
         }
 
         .history-container {
-            // display: flex;
-            // flex-direction: column;
-            // justify-content: center;
-            padding: 5rem 7rem 0 7rem;
+            padding: 5rem 5rem 0 5rem;
 
             .history-text {
-                font-size: 1.2rem;
+                font-size: 1.4rem;
+
+                &:nth-child(2) {
+                    margin-top: 2rem;
+                }
+
             }
 
             .history-info {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+
                 .container {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: flex-end;
+
                     .number {
                         font-size: 2rem;
                     }
 
                     .text {
                         font-size: 1rem;
+                        word-wrap: break-word;
                     }
 
                 }
@@ -158,15 +167,122 @@
 }
 
 @media screen and (max-width: 768px) {
-    // .history {
-    //     .history-container {
-    //         grid-row: 3;
-    //         grid-column: 3;
-    //         padding: 5rem 3rem 0 3rem;
-    //     }
-    // }
+    .history {
+        grid-template-columns: 75px 1fr 75px;
+        grid-template-rows: 50px 125px 1fr 50px;
+
+        .history-img {
+            grid-column: 1/4;
+            background-color: rgba(0, 0, 0, .85);
+        }
+
+
+        .history-title {
+            font-size: 3.5rem;
+            grid-column: 2;
+
+
+        }
+
+        .history-container {
+            grid-column: 2;
+            grid-row: 3;
+            padding: 4rem 0 0 0;
+
+            .history-text {
+                &:nth-child(2) {
+                    margin-top: 4rem;
+                }
+
+            }
+
+            .history-info {
+                .container {
+                    .number {
+                        font-size: 2.25rem;
+                    }
+
+                    .text {
+                        font-size: 1.2rem;
+                        word-wrap: break-word;
+                    }
+
+                }
+            }
+        }
+    }
 }
 
-@media screen and (max-width: 425px) {}
+@media screen and (max-width: 564px) {
+    .history {
+        grid-template-columns: 50px 1fr 50px;
 
-@media screen and (max-width: 350px) {}
+        .history-title {
+            font-size: 3rem;
+        }
+
+        .history-container {
+            .history-text {
+                font-size: 1.2rem;
+            }
+        }
+
+        .history-container {
+            .history-info {
+                .container {
+                    .number {
+                        font-size: 2rem;
+                    }
+
+                    .text {
+                        font-size: 1rem;
+                        word-wrap: break-word;
+                    }
+
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .history {
+        grid-template-rows: 50px 85px 1fr 50px;
+        grid-template-columns: 25px 1fr 25px;
+
+        .history-title {
+            font-size: 2.75rem;
+        }
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .history {
+
+        .history-title {
+            font-size: 2.5rem;
+        }
+
+        .history-container {
+            .history-text {
+                font-size: 1.2rem;
+            }
+        }
+
+        .history-container {
+            .history-info {
+                .container {
+                    .number {
+                        font-size: 2rem;
+                    }
+
+                    .text {
+                        font-size: 1rem;
+                        word-wrap: break-word;
+                    }
+
+                }
+            }
+        }
+    }
+}
