--- a/src/Styles/Home/hero.scss
+++ b/src/Styles/Home/hero.scss
@@ -6,7 +6,7 @@
     // position: relative;
     display: grid;
     grid-template-columns: 300px 100px 1fr;
-    grid-template-rows: 50px minmax(600px, 1fr) 50px; //100 800 200
+    grid-template-rows: 50px minmax(600px, 1fr) 100px; //100 800 200
     padding-left: 75px;
     margin: auto auto;
 
@@ -116,13 +116,13 @@
     .hero {
         height: 100vh !important;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 100px;
+        grid-template-rows: 1fr 50px;
         padding: 0;
         margin-top: -80px;
 
         .hero-img {
-            grid-row: 1/2;
-            grid-column: 1/4;
+            grid-row: 1/3;
+            grid-column: 1;
             background-color: rgba(0, 0, 0, .8);
         }
 
@@ -143,6 +143,10 @@
                 width: 310px;
 
             }
+        }
+
+        .next {
+            grid-row: 2;
         }
     }
 }
