--- a/src/Styles/Home/newsLetter.scss
+++ b/src/Styles/Home/newsLetter.scss
@@ -2,27 +2,27 @@
 
 
 .news-letter {
-    // margin-top: 5rem;
-    height: 300px;
-    background: #101010;
+    background: $lightblack;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 7.5rem 5rem;
 
 
     .text-container {
         width: 100%;
-        max-width: 900px;
+        max-width: 1100px;
 
         .news-title {
             font-size: 3rem;
-            margin-bottom: 2rem;
+            margin-bottom: 3rem;
         }
 
         .news-text {
-            font-size: 1.8rem;
+            font-size: 1.6rem;
             line-height: 2.5rem;
+            letter-spacing: 1px;
         }
 
         .input-container {
@@ -36,7 +36,7 @@
                 height: 5rem;
                 padding-left: 1rem;
                 font-family: $text-font;
-                font-size: 1.6rem;
+                font-size: 1.4rem;
 
                 &::placeholder {
                     font-family: "FontAwesome", "Montserrat";
@@ -47,7 +47,7 @@
             a {
                 font-size: 1.4rem;
                 letter-spacing: 1px;
-                padding: 1rem 5rem;
+                padding: 1rem 3rem;
                 margin-left: 2rem;
                 background: $green;
                 text-decoration: none;
@@ -56,6 +56,141 @@
             }
         }
     }
+}
+
+@media screen and (min-width: 1720px) {
+    .news-letter {
+        .text-container {
+            .news-title {
+                font-size: 3.5rem
+            }
+
+            .news-text {
+                font-size: 1.8rem;
+            }
+
+            .input-container {
 
 
+                input {
+                    font-size: 1.6rem;
+                    height: 6rem;
+                }
+
+                a {
+                    padding: 2rem 4rem;
+                    font-size: 1.6rem;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .news-letter {
+        .text-container {
+            .input-container {
+                input {
+                    font-size: 1.6rem;
+                    height: 5rem;
+                }
+
+                a {
+                    padding: 1rem 2rem;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .news-letter {
+        padding: 5rem 7.5rem;
+
+        .text-container {
+            .news-title {
+                font-size: 2.5rem
+            }
+
+            .news-text {
+                font-size: 1.4rem;
+            }
+
+            .input-container {
+                input {
+                    font-size: 1.4rem;
+                    height: 5rem;
+                }
+
+                a {
+                    padding: 1rem 2rem;
+                    font-size: 1.2rem;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 564px) {
+    .news-letter {
+        padding: 5rem;
+
+        .text-container {
+            .news-title {}
+
+            .input-container {
+                input {
+                    display: none;
+                }
+
+                a {
+                    margin: 0;
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    padding: 1.5rem 6rem;
+                    font-size: 1.4rem;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .news-letter {
+        padding: 5rem 3rem;
+
+        .input-container {
+            input {
+                display: none;
+            }
+
+            a {
+                margin: 0;
+                width: 100%;
+                padding: 1.5rem 0;
+                font-size: 1.4rem;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .news-letter {
+        .text-container {
+            .news-title {
+                font-size: 2.25rem;
+            }
+
+            .news-text {
+                font-size: 1.2rem;
+            }
+
+            .input-container {
+                a {
+                    font-size: 1.2rem;
+                }
+            }
+        }
+    }
 }
