--- a/src/Styles/Home/slider.scss
+++ b/src/Styles/Home/slider.scss
@@ -5,6 +5,9 @@
 .slider {
     display: flex;
     flex-direction: column;
+    margin-left: auto;
+    width: 100%;
+    max-width: 1100px;
 
     .left,
     .right,
@@ -12,17 +15,18 @@
         cursor: pointer;
     }
 
+    .left {
+        margin: 0;
+    }
+
     .slide-items {
         height: 100%;
         width: 100%;
         display: flex;
+        // padding-left: 5rem;
 
         .active {
             width: 100%;
-            // box-shadow:
-            //     #262626 0px 0px 2px 2px,
-            //     #000000 4px 4px 8px,
-            //     #4d4d4d -4px -4px 8px;
             background-blend-mode: normal;
         }
     }
@@ -60,7 +64,7 @@
         }
 
         .text {
-            font-size: 1.8rem;
+            font-size: 1.6rem;
             line-height: 2.5rem;
             letter-spacing: 1px;
 
@@ -68,7 +72,7 @@
 
         .quote {
             margin-top: 5rem;
-            font-size: 2.2rem;
+            font-size: 2.25rem;
             font-style: italic;
             text-transform: capitalize;
 
