--- a/src/Styles/Global/navbar.scss
+++ b/src/Styles/Global/navbar.scss
@@ -2,7 +2,7 @@
 
 nav {
     max-width: 1700px;
-    position: relative;
+    position: sticky;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -20,7 +20,7 @@ nav {
         list-style: none;
         display: flex;
 
-        .link {
+        a {
             font-size: 1.8rem;
             margin-left: 2rem;
             cursor: pointer;
