--- a/src/Styles/Home/staff.scss
+++ b/src/Styles/Home/staff.scss
@@ -1,8 +1,7 @@
 @import '../_global';
 
 .staff {
-    min-height: 100vh;
-    min-height: 100vh;
+    min-height: calc(100vh - 80px);
     max-width: 1700px;
     display: grid;
     grid-template-columns: 75px max(350px) 100px 1fr 75px;
