added support for video and puzling play button - need to solve large files upload

--- a/src/Styles/Home/services.scss
+++ b/src/Styles/Home/services.scss
@@ -12,11 +12,11 @@
     .services-img {
         grid-row: 2/4;
         grid-column: 2/4;
-        background: url("../../assets/images/girl.jpg") no-repeat;
+        background: url("../../assets/images/bild15.jpg") no-repeat;
         background-position: center;
         background-size: cover;
         background-blend-mode: multiply;
-        background-color: rgba(0, 0, 0, .4);
+        background-color: rgba(0, 0, 0, .65);
 
     }
 
