--- a/src/Styles/Home/history.scss
+++ b/src/Styles/Home/history.scss
@@ -10,14 +10,43 @@
     grid-template-rows: 75px 150px 1fr 75px;
     margin: 0 auto;
 
-    .history-img {
+    // .history-img {
+    //     // grid-row: 2/4;
+    //     // grid-column: 1/3;
+    //     // background: url("../../assets/images/gym.jpg") no-repeat;
+    //     // background-position: center;
+    //     // background-size: cover;
+    //     // background-blend-mode: multiply;
+    //     // background-color: rgba(0, 0, 0, .4);
+
+    // }
+
+    .video-wrapper {
+        position: relative;
         grid-row: 2/4;
         grid-column: 1/3;
-        background: url("../../assets/images/gym.jpg") no-repeat;
-        background-position: center;
-        background-size: cover;
-        background-blend-mode: multiply;
-        background-color: rgba(0, 0, 0, .4);
+        width: 100%;
+        height: 100%;
+
+        .history-video {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+            outline: none;
+
+            &.filter {
+                opacity: .4;
+            }
+
+        }
+
+        .playPause {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+
+        }
 
     }
 
@@ -298,5 +327,101 @@
                 }
             }
         }
+    }
+}
+
+
+
+.video-play-button {
+    position: absolute;
+    z-index: 10;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    box-sizing: content-box;
+    display: block;
+    width: 32px;
+    height: 44px;
+    border-radius: 50%;
+    padding: 18px 20px 18px 28px;
+    outline: none;
+    border: 1px solid $green;
+    cursor: pointer;
+
+    &.hide {
+        display: none;
+    }
+}
+
+.video-play-button:before {
+    content: "";
+    position: absolute;
+    z-index: 0;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    display: block;
+    width: 80px;
+    height: 80px;
+    background: $green;
+    border-radius: 50%;
+    border: 1px solid $green;
+    animation: pulse-border 1500ms ease-out infinite;
+}
+
+.video-play-button:after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    display: block;
+    width: 80px;
+    height: 80px;
+    background: $green;
+    border-radius: 50%;
+    border: 1px solid $green;
+    transition: all 200ms;
+}
+
+.video-play-button:hover {
+    border: 1px solid darken($green, 10%);
+
+}
+
+.video-play-button:hover:after {
+    background-color: darken($green, 10%);
+    border: 1px solid darken($green, 10%);
+}
+
+.video-play-button img {
+    position: relative;
+    z-index: 3;
+    max-width: 100%;
+    width: auto;
+    height: auto;
+}
+
+.video-play-button span {
+    display: block;
+    position: relative;
+    z-index: 3;
+    width: 0;
+    height: 0;
+    border-left: 32px solid #fff;
+    border-top: 22px solid transparent;
+    border-bottom: 22px solid transparent;
+}
+
+@keyframes pulse-border {
+    0% {
+        transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1);
+        opacity: 1;
+    }
+
+    100% {
+        transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1.5);
+        opacity: 0;
     }
 }
